# AP_PoolSync

./: .gitignore  README.md  poolsync.code-workspace  pyproject.toml  pyrightconfig.json  quality_scale.yaml
custom_components/: __init__.py
custom_components/poolsync_custom/: __init__.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  number.py  runtime.py  select.py  sensor.py  strings.json  switch.py
custom_components/poolsync_custom/translations/: en.json
docs/: implementation-plan-device-refactor.md  poolsync-reverse-engineering.md
tests/: conftest.py
tests/components/poolsync_custom/: test_api.py  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_equipment.py  test_init.py  test_number.py  test_number_setup.py  test_runtime.py  test_select.py  test_sensor_setup.py
tests/sample_diagnostics/: 090-compressor-off-filtration-group-1750rpm.json  090-compressor-off-priming-filtration-group-3450rpm.json  090-compressor-on-2900rpm-pool-group.json  chlor-chem_diagnostics_beach_spa.json  chlor-chem_diagnostics_main.json  sq160r-heating.json  sq160r-idle.json  sq160r-off.json  t75-heat-pool.json  t75-heat-spa.json  t75-heatpump-fault.json  t75-in-celcius.json  t75-off-no-flow.json  t75-off-with-flow.json  t75-remote-disabled.json  t75-spa-startup-fan-nocompressor.json
